github action commit generated code